[project]
name = "voiceadmin-learn"
version = "0.1.0"
description = "Hybrid voice agent for eligibility verification — learning project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.97.0",
    "cartesia==3.0.2",
    "deepgram-sdk==6.1.1",
    "fastapi==0.136.0",
    "groq==1.1.2",
    "langchain==1.2.15",
    "langfuse==4.5.0",
    "langgraph==1.1.6",
    "pipecat-ai==1.0.0",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "structlog==25.5.0",
    "twilio==9.10.5",
    "uvicorn==0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pyright==1.1.408",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["agent", "mock_payer", "tests"]
exclude = [".venv", "**/__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
